@@ -12,6 +12,7 @@
 * Tables and selectable Plots can specify an initial selection when rendering
 * Sunburst can select an initial node to render as the root 
 * Default selectable plots to have a visible unbrush without user styling
+* Fix unbrush for selectable plots with margin and non-0 minimum domains.
 
 0.1.7
 * Rename NPM module to "chartcollection"
